Add plausible analytics (#11)
* Add dev.to badge

* Add plausible analytics jdheyburn/jdheyburn.co.uk@85636cde6f30d3ad7c523d2ff1abac80ff51d6f3

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=author content="Joseph D. Heyburn"><meta name=description content="Ramblings of a tech guy"><meta name=keywords content="blog,developer,devops,cloud"><meta name=twitter:card content="summary_large_image"><meta name=twitter:image content="https://jdheyburn.co.uk/images/jdheyburn_co_uk_card.png"><meta name=twitter:title content="📫 Contact"><meta name=twitter:description content="You can get in contact with me via any of the below:
+<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><script async defer data-domain=jdheyburn.co.uk src=https://plausible.io/js/plausible.js></script><meta name=author content="Joseph D. Heyburn"><meta name=description content="Ramblings of a tech guy"><meta name=keywords content="blog,developer,devops,cloud"><meta name=twitter:card content="summary_large_image"><meta name=twitter:image content="https://jdheyburn.co.uk/images/jdheyburn_co_uk_card.png"><meta name=twitter:title content="📫 Contact"><meta name=twitter:description content="You can get in contact with me via any of the below:
 🐤 Twitter
 ✉️ jdheyburn [at] gmail [dot] com"><meta property="og:title" content=":mailbox: Contact"><meta property="og:description" content="You can get in contact with me via any of the below:
 🐤 Twitter
@@ -8,4 +8,4 @@
 2020
 Joseph D. Heyburn
 ·
-Powered by <a href=https://gohugo.io/>Hugo</a> & <a href=https://github.com/luizdepra/hugo-coder/>Coder</a>.</section></footer></main><script type=application/javascript>var dnt=(navigator.doNotTrack||window.doNotTrack||navigator.msDoNotTrack);var doNotTrack=(dnt=="1"||dnt=="yes");if(!doNotTrack){(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-139246187-1','auto');ga('set','anonymizeIp',true);ga('send','pageview');}</script></body></html>
+Powered by <a href=https://gohugo.io/>Hugo</a> & <a href=https://github.com/luizdepra/hugo-coder/>Coder</a>.</section></footer></main></body></html>
