deploy: jdheyburn/jdheyburn.co.uk@e13c6669fc032e80bc739f96a02afc1d26e4adeb

--- a/projects/index.html
+++ b/projects/index.html
@@ -146,7 +146,7 @@
 <ul>
 <li>The <a href="https://docs.aws.amazon.com/systems-manager/latest/userguide/patch-manager-how-it-works-alt-source-repository.html">patch source</a> API enables AWS SSM Patch Baselines to specify alternate patch repositories at runtime of the SSM Document AWS-RunPatchBaseline.</li>
 </ul>
-<p><strong>Status</strong>: Awaiting Review ⏳</p>
+<p><strong>Status</strong>: Merged ✅</p>
 
   </article>
 </section>
